--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -14,9 +14,7 @@
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes",
-      "base_path": "ObjectiveCJinhwaTest",
-      "site_name": "Docs"
+      "template_folder": "_themes"
     }
   ],
   "notification_subscribers": [],
