--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,22 @@
 {
   "docsets_to_publish": [
     {
+      "docset_name": "ObjectiveCChanTest",
+      "build_source_folder": "ObjectiveCChanTest",
+      "build_output_subfolder": "ObjectiveCChanTest",
+      "locale": "en-us",
+      "monikers": [],
+      "moniker_ranges": [],
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
+    },
+    {
       "docset_name": "ObjectiveCJinhwaTest",
       "build_source_folder": "ObjectiveCJinhwaTest",
       "build_output_subfolder": "ObjectiveCJinhwaTest",
